tests/paczka1/small_fuzzy/96255304.err
Error in line 2: uxY S33 59,0
Error in line 1: J2A8JD2MY4c S348 34,9
